--- a/.github/workflows/generated-linux-binary-manywheel-nightly.yml
+++ b/.github/workflows/generated-linux-binary-manywheel-nightly.yml
@@ -402,15 +402,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout nWEIdia/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: build_cu124_patch
+          ref: main
           submodules: recursive
-          repository: nWEIdia/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean nWEIdia/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -505,15 +505,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout nWEIdia/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: build_cu124_patch
+          ref: main
           submodules: recursive
-          repository: nWEIdia/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean nWEIdia/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -1021,15 +1021,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout nWEIdia/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: build_cu124_patch
+          ref: main
           submodules: recursive
-          repository: nWEIdia/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean nWEIdia/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -1124,15 +1124,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout nWEIdia/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: build_cu124_patch
+          ref: main
           submodules: recursive
-          repository: nWEIdia/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean nWEIdia/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -1640,15 +1640,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout nWEIdia/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: build_cu124_patch
+          ref: main
           submodules: recursive
-          repository: nWEIdia/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean nWEIdia/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -1743,15 +1743,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout nWEIdia/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: build_cu124_patch
+          ref: main
           submodules: recursive
-          repository: nWEIdia/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean nWEIdia/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -2259,15 +2259,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout nWEIdia/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: build_cu124_patch
+          ref: main
           submodules: recursive
-          repository: nWEIdia/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean nWEIdia/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -2362,15 +2362,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout nWEIdia/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: build_cu124_patch
+          ref: main
           submodules: recursive
-          repository: nWEIdia/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean nWEIdia/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -2878,15 +2878,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout nWEIdia/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: build_cu124_patch
+          ref: main
           submodules: recursive
-          repository: nWEIdia/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean nWEIdia/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -2981,15 +2981,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout nWEIdia/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: build_cu124_patch
+          ref: main
           submodules: recursive
-          repository: nWEIdia/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean nWEIdia/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
