--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -142,6 +142,26 @@ jobs:
         ]}
     secrets: inherit
 
+  win-arm64-vs2022-cpu-py3-build:
+    permissions:
+      id-token: write
+      contents: read
+    name: win-arm64-vs2022-cpu-py3
+    uses: ./.github/workflows/_win-arm64-build.yml
+    needs: get-label-type
+    with:
+      build-environment: win-arm64-vs2022-cpu-py3
+      cuda-version: cpu
+      sync-tag: win-arm64-cpu-build
+      runner: "windows-11-arm64"
+      test-matrix: |
+        { include: [
+          { config: "default", shard: 1, num_shards: 3, runner: "windows-11-arm64" },
+          { config: "default", shard: 2, num_shards: 3, runner: "windows-11-arm64" },
+          { config: "default", shard: 3, num_shards: 3, runner: "windows-11-arm64" },
+        ]}
+    secrets: inherit
+
   win-vs2022-cpu-py3-test:
     name: win-vs2022-cpu-py3
     uses: ./.github/workflows/_win-test.yml
