--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -11,7 +11,6 @@ from typing import (
     Any,
     AnyStr,
     Callable,
-    ContextManager,
     Generic,
     IO,
     Literal,
@@ -144,7 +143,7 @@ class Stream:
     def record_event(self, event: Event | None = None) -> Event: ...
     def __hash__(self) -> _int: ...
     def __eq__(self, other: object) -> _bool: ...
-    def __enter__(self) -> Stream: ...
+    def __enter__(self) -> Self: ...
     def __exit__(self, exc_type, exc_val, exc_tb) -> None: ...
 
 # Defined in torch/csrc/Event.cpp
