--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -2499,10 +2499,21 @@ def _jit_to_static_module(graph_or_module: Union[Graph,ScriptModule]) -> Any: ..
 def _fuse_to_static_module(graph_or_module: Union[Graph,ScriptModule], min_size: _int) -> Any: ...
 
 # Defined in torch/csrc/fx/node.cpp
+def _fx_map_aggregate(a: Any, fn: Callable[[Any], Any]) -> Any: ...
+def _fx_map_arg(a: Any, fn: Callable[[Any], Any]) -> Any: ...
 class _NodeBase:
     _erased: _bool
     _prev: FxNode
     _next: FxNode
+    def __init__(
+            self,
+            graph: Any,
+            name: str,
+            op: str,
+            target: Any,
+            return_type: Any,
+    ) -> None: ...
+    def _update_args_kwargs(self, args: tuple[Any, ...], kwargs: dict[str, Any]): ...
 
 class _NodeIter(Iterator):
     def __init__(self, root: FxNode, reversed: _bool) -> None: ...
