--- a/.lintrunner.toml
+++ b/.lintrunner.toml
@@ -1707,6 +1707,30 @@ include_patterns = [
 ]
 is_formatter = true
 
+# `perf_linter` finds common Python patterns which are slow and
+# suggests faster alternatives.
+
+[[linter]]
+code = 'PERF_LINTER'
+command = [
+    'python3',
+    'tools/linter/adapters/perf_linter.py',
+    '--lintrunner',
+    '--',
+    '@{{PATHSFILE}}'
+]
+include_patterns = [
+    "torch/_inductor/**/*.py",
+    "torch/_functorch/**/*.py",
+    "torch/_dynamo/**/*.py",
+    "torch/fx/**/*.py",
+]
+exclude_patterns = [
+    # mypy errors due to bad interactions with generic types
+    "torch/_inductor/codegen/cpp_grouped_gemm_template.py",
+]
+is_formatter = true
+
 # `docstring_linter` reports on long Python classes, methods, and functions
 # whose definitions have very small docstrings or none at all.
 #
