--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -70,6 +70,10 @@ jobs:
             repo-owner: pytorch
             branch: main
             pin-folder: .ci/docker/ci_commit_pins
+          - repo-name: triton
+            repo-owner: openai
+            branch: main
+            pin-folder: .ci/docker/ci_commit_pins
     if: ${{ github.event_name == 'schedule' && github.repository_owner == 'pytorch' }}
     steps:
       - name: update-vision-commit-hash
