--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -71,7 +71,7 @@ jobs:
             branch: main
             pin-folder: .ci/docker/ci_commit_pins
           - repo-name: triton
-            repo-owner: openai
+            repo-owner: triton-lang
             branch: main
             pin-folder: .ci/docker/ci_commit_pins
     if: ${{ github.event_name == 'schedule' && github.repository_owner == 'pytorch' }}
